--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,48 +1,27 @@
-<!--
-  _   _  ___  ____  ___ ________  _   _     _   _ ___   
- | | | |/ _ \|  _ \|_ _|__  / _ \| \ | |   | | | |_ _| 
- | |_| | | | | |_) || |  / / | | |  \| |   | | | || | 
- |  _  | |_| |  _ < | | / /| |_| | |\  |   | |_| || |
- |_| |_|\___/|_| \_\___/____\___/|_| \_|    \___/|___|
-                                                                                                                                                                                                                                                                                                                                       
-=========================================================
-* Horizon UI Tailwind React - v1.0.0
-=========================================================
-
-* Product Page: https://www.horizon-ui.com/
-* Copyright 2023 Horizon UI (https://www.horizon-ui.com/)
-
-* Designed and Coded by Simmmple
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
--->
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-  /> 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/> 
-    <title>Horizon UI - Tailwind React</title>
-  </head>
-  <body class="font-dm bg-lightPrimary" >
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div> 
-  </body>
-</html>
 
- <!--
-              ___
-          .__(  .)< 
-           \_____)
-       ~~~~~~~~~~~~~~~~    
--->
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Rishta for you</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+
+<body className="font-dm bg-lightPrimary">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
